# SHMS_Calibration_NN

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  simc_pretrain_handover.ipynb
dataset/: stage2_25521_labeled_mech25x16p4_tol3_directgrid_bank217_summary.json  stage2_25521_labeled_mech25x16p4_tol3_directgrid_max80_eqholeweight_summary.json  stage2_25521_labeled_mech25x16p4_tol3_directgrid_summary.json  stage2_25521_labeled_mech25x16p4_tol3_hdbscan_centerout_nnrelabel_perfoiltol_summary.json  stage2_25521_labeled_mech25x16p4_tol3_hdbscan_centerout_nnrelabel_summary.json  stage2_25521_labeled_mech25x16p4_tol3_hdbscan_centerout_pen035_summary.json  stage2_25521_labeled_mech25x16p4_tol3_hdbscan_rebuilt_summary.json  stage2_25521_labeled_mech25x16p4_tol3_summary.json  stage2_25521_labeled_summary.json
experiments/ResMLP/: ResMLP_root.ipynb  ResMLP_transport.ipynb
experiments/mlp_reduced_data_test/: MLP.ipynb  README.md  plot_ztari_feature_hist.py  train_reduced_mlp.ipynb  train_reduced_mlp.py
outputs/: stage2_experiment_report_20260601.docx
outputs/iterative_self_consistent/: config_iter1.yaml  convergence.json
outputs/iterative_v2/: config_iter1.yaml  config_iter2.yaml  config_iter3.yaml  convergence.json
outputs/iterative_v3_ytarcheck/: config_iter1.yaml  config_iter2.yaml  config_iter3.yaml  convergence.json
outputs/stage2_ytar_analysis/: ytar_distribution_summary.json
tmp_stage2_effects_20260601/: README.md  check_ytar_vs_foil_z.py  evaluate_stage2_effects.py
training/: README.md  TARGETED_TRANSFER_LEARNING_PLAN.md  __init__.py
(+126 files in other folders)
